# LearnProjMatrix

./: README.md  full_test.html  proj_lookat_demo.html  projection.py  z_negtive.html  z_positive.html
doc/: NerfCoordinateDetails.md  OpenGL_Projection.md  lookAt.md
glm_demo/: CMakeLists.txt  README.md
glm_demo/src/: main.cpp
pyglet_demo/: README.md  pyglet_demo.py
real_world_demo/: README.md  real_world.html  reconstruct3dFromPlane.py
real_world_demo/textures/: colmap_rst.json  publish_files.py
unity_demo/: README.md  UpdateCamera.cs
